[gd_scene load_steps=6 format=3 uid="uid://craawda1yun5y"]

[ext_resource type="Script" path="res://Feagi-Godot-Interface/UI/Windows/Draggable_Windows/Spawn_Cortical_Area/Parts/PartSpawnCorticalAreaIOPU.gd" id="1_ucbj0"]
[ext_resource type="Script" path="res://Feagi-Godot-Interface/UI/Windows/Elements/DropDown/TemplateDropDown.gd" id="2_hm4ef"]
[ext_resource type="PackedScene" uid="uid://boj8wsv76jqlm" path="res://Feagi-Godot-Interface/UI/Windows/Elements/Vectors/Vector3iField.tscn" id="3_f5a7v"]
[ext_resource type="Script" path="res://Feagi-Godot-Interface/UI/Windows/Elements/TextBoxes/IntInput.gd" id="4_dpw1q"]
[ext_resource type="Script" path="res://Feagi-Godot-Interface/UI/Windows/Elements/TextBoxes/TextInput.gd" id="4_y0ej3"]

[node name="Definition_IOPU" type="VBoxContainer"]
theme_override_constants/separation = 8
script = ExtResource("1_ucbj0")

[node name="input_output_type" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="input_output_type"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TemplateDropDown" type="OptionButton" parent="input_output_type"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
script = ExtResource("2_hm4ef")

[node name="location" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="location"]
layout_mode = 2
size_flags_horizontal = 3
text = "Choose a location"

[node name="location" parent="location" instance=ExtResource("3_f5a7v")]
layout_mode = 2

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Advanced"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="name" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/name"]
layout_mode = 2
size_flags_horizontal = 3
text = "Custom Name"

[node name="name" type="LineEdit" parent="PanelContainer/VBoxContainer/name"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
script = ExtResource("4_y0ej3")

[node name="channel_count" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/channel_count"]
layout_mode = 2
size_flags_horizontal = 3
text = "Set channel count"

[node name="channel_count" type="LineEdit" parent="PanelContainer/VBoxContainer/channel_count"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
script = ExtResource("4_dpw1q")
initial_int = 1
min_value = 1

[node name="dimensions" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/dimensions"]
layout_mode = 2
size_flags_horizontal = 3
text = "Choose dimensions"

[node name="dimensions" parent="PanelContainer/VBoxContainer/dimensions" instance=ExtResource("3_f5a7v")]
layout_mode = 2
int_x_min = 1
int_y_min = 1
int_z_min = 1
initial_editable = false

[connection signal="template_picked" from="input_output_type/TemplateDropDown" to="." method="_drop_down_changed"]
